--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-2.jpg
+featured_image: /assets/images/posts/ink-2020-3.jpg
 featured: true
 hidden: true
 ---
@@ -30,7 +30,7 @@ The holotype of *Luchibang* was found with one *Lycoptera* between its jaws and 
 
 *Overoraptor* was a maniraptoran dinosaur from Late Cretaceous Argentina that shows a novel mix of traits found in dromaeosaurs ("raptor" dinosaurs) and birds.  It had long, flight-adapted arms like a bird, but also long, running-adapted, sickle-clawed legs, like a dromaeosaur.  Its name means "piebald thief," because the holotype bones looked piebald.  However, lots of modern birds exhibit alternative colorings (melanism, albinism, leucism, and piebaldism), so I made my *Overoraptor* actually piebald on the outside.  The pose and feathering are inspired by the photo I took of a greylag goose that had just finished preening itself, and had wisps of downy feathers stuck to its beak.  Check out last week's [post](https://obscuredinosaurfacts.com/blog/post/2020/09/23/dinophoto2.html) to see that photo and more.  Modern birds spend tons of time preening themselves, so I'd expect at least the more birdlike of the non-avian dinosaurs to have engaged in similar behavior.
 
-<!-- #### Day 3: Bulky
+#### Day 3: Bulky
 ![bulky](/assets/images/posts/ink-2020-3.jpg)
 
 Here's *Yamanasaurus* and *Analong*, two newly discovered sauropods, showing off their different gaits.  *Yamanasaurus* was a saltasaurine titanosaur from Late Cretaceous Ecuador, and *Analong* was a mamenchisaurid from Middle Jurassic China.
@@ -41,7 +41,7 @@ While the narrow-gauged gait looks more graceful and energy-efficient, it seems 
 
 I wanted to draw some sauropods from front view because nobody ever does that.  It's as if dinosaurs only have one side.  Also, note that these specific dinosaurs were not the ones who made these specific trackways; rather, both are just examples of the wide and narrow habits.
 
-#### Day 4: Radio
+<!-- #### Day 4: Radio
 ![radio](/assets/images/posts/ink-2020-4.jpg)
 
 I was having a hard time figuring out how I was going to relate "radio" to Mesozoic reptiles, and then it hit me--radiometric dating!  Before drawing this comic, I knew vaguely how it worked, but the research I did to create this gave me a much deeper understanding.  The characters shown here are ones I'm thinking about using in a couple of paleontology children's books.  So far, the rapport could use some work--it's mostly just Paige explaining for days.  Man, this took forever.  I don't know how real comic artists do it.
