--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-3.jpg
+featured_image: /assets/images/posts/ink-2020-4.jpg
 featured: true
 hidden: true
 ---
@@ -16,7 +16,7 @@ It's that time of year again!  I'm really excited to compare my efforts this yea
 
 Last year I challenged myself to relate each prompt word to a Mesozoic reptile.  This year I'll do the same, but with the additional challenge of only drawing 2020 novataxa--that is, Mesozoic reptile genera named this year.  Don't worry, there are lots to choose from!
 
-Note that since it's only October second, there're only two drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later in the month!
+Note that since it's early in the month, there're only a few drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later in the month!
 
 #### Day 1: Fish
 ![fish](/assets/images/posts/ink-2020-1.jpg)
@@ -41,7 +41,7 @@ While the narrow-gauged gait looks more graceful and energy-efficient, it seems 
 
 I wanted to draw some sauropods from front view because nobody ever does that.  It's as if dinosaurs only have one side.  Also, note that these specific dinosaurs were not the ones who made these specific trackways; rather, both are just examples of the wide and narrow habits.
 
-<!-- #### Day 4: Radio
+#### Day 4: Radio
 ![radio](/assets/images/posts/ink-2020-4.jpg)
 
 I was having a hard time figuring out how I was going to relate "radio" to Mesozoic reptiles, and then it hit me--radiometric dating!  Before drawing this comic, I knew vaguely how it worked, but the research I did to create this gave me a much deeper understanding.  The characters shown here are ones I'm thinking about using in a couple of paleontology children's books.  So far, the rapport could use some work--it's mostly just Paige explaining for days.  Man, this took forever.  I don't know how real comic artists do it.
@@ -50,7 +50,7 @@ The novataxon that makes a guest appearance in the strip is *Kholumolumo*, a sau
 
 I'm weirdly proud of the panel where she's doing the "bracketing" gesture.
 
-#### Day 5: Blade
+<!-- #### Day 5: Blade
 ![blade](/assets/images/posts/ink-2020-5.jpg)
 
 This is *Adratiklit*, a stegosaur from Middle Jurassic Morocco.  It's only known from fragmentary material--enough to place it in a family with *Dacentrurus* and *Miragaia* (and extrapolate that it probably looked similar to them), but not enough to really say anything about *Adratiklit* itself.  To be honest, I think stegosaurs are highly overrated dinosaurs.  They didn't have much diversity of forms, and went extinct halfway through the Age of Dinosaurs, at the end of the Jurassic.
