--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-4.jpg
+featured_image: /assets/images/posts/ink-2020-5.jpg
 featured: true
 hidden: true
 ---
@@ -16,7 +16,7 @@ It's that time of year again!  I'm really excited to compare my efforts this yea
 
 Last year I challenged myself to relate each prompt word to a Mesozoic reptile.  This year I'll do the same, but with the additional challenge of only drawing 2020 novataxa--that is, Mesozoic reptile genera named this year.  Don't worry, there are lots to choose from!
 
-Note that since it's early in the month, there're only a few drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later in the month!
+Note that since it's early in the month, there're only a few drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later!
 
 #### Day 1: Fish
 ![fish](/assets/images/posts/ink-2020-1.jpg)
@@ -50,7 +50,7 @@ The novataxon that makes a guest appearance in the strip is *Kholumolumo*, a sau
 
 I'm weirdly proud of the panel where she's doing the "bracketing" gesture.
 
-<!-- #### Day 5: Blade
+#### Day 5: Blade
 ![blade](/assets/images/posts/ink-2020-5.jpg)
 
 This is *Adratiklit*, a stegosaur from Middle Jurassic Morocco.  It's only known from fragmentary material--enough to place it in a family with *Dacentrurus* and *Miragaia* (and extrapolate that it probably looked similar to them), but not enough to really say anything about *Adratiklit* itself.  To be honest, I think stegosaurs are highly overrated dinosaurs.  They didn't have much diversity of forms, and went extinct halfway through the Age of Dinosaurs, at the end of the Jurassic.
@@ -59,7 +59,7 @@ Because the prompt was "blade," I went for another front view, to show the blade
 
 I was trying to give *Adratiklit* a smooth combination of large-animal features and bird features, which is why he has a wattle.  I'm not super happy with how comically small the spikes ended up looking against his giant body though.
 
-#### Day 6: Rodent
+<!-- #### Day 6: Rodent
 ![rodent](/assets/images/posts/ink-2020-6.jpg)
 
 Okay, this picture doesn't actually feature any rodents, but since rodents didn't arise until the non-avian dinosaurs were extinct, I took some artistic license.  This is the new mini carcharodontosaur, *Lajasvenator*, chasing the long-tailed cladotherian mammal (early relative of marsupials and placentals) *Vincelestes* in Early Cretaceous Argentina.  Carcharodontosaurs were a group of generally very large carnivorous theropods with shark-like slicing teeth.  The largest members, *Carcharodontosaurus*, *Giganotosaurus*, and *Mapusaurus*, rivaled *Tyrannosaurus* in size.  *Lajasvenator*, on the other hand, was merely the size of a big dog.
@@ -193,4 +193,13 @@ The ["official" reconstruction](https://www.smithsonianmag.com/smart-news/new-sp
 A couple things were challenging about this piece.  As an adaptation for grasping items without the primary feathers getting in the way, my *Dineobellator* has its primaries held more perpendicular to the hand rather than fanned forward.  I also was having a hard time with the perspective--I meant for the gray part behind the white eyespots to be his neck, but it ended up looking more like a big domed cranium.
 
 I guess drawing dinosaurs from front or back view is another theme this Inktober.
+
+#### Day 23: Rip
+![rip](/assets/images/posts/ink-2020-23.jpg)
+
+Thank goodness for *Gnathomortis*!  I was worried we weren't going to see any new mosasaur genera this year, but this guy was named just in time for Inktober!
+
+Mosasaurs were lizards, possibly relatives of monitors, possibly relatives of snakes, that made the transition to a fully aquatic lifestyle in the Late Cretaceous period.  Like other marine reptiles, they would have been streamlined rather than scaly, warm-blooded, and given live birth tail first.  Unlike other marine reptiles, they were still *lizards*, and therefore would have had forked tongues, "forked" penises, a pineal (third) eye on top of their head, and would have shed their skin.  Imagine huge discarded mosasaur skins washing up on the beach!  What a sight to see.
+
+I was inspired by my fellow paleo Inktober participant, u/jupiter1390, who on Day 2 did a beautiful depiction of bioluminescent squid using white ink.  I asked what kind of white pen they used, ordered them, and here we are.  It'll take some getting used to, but I'm happy with how this one turned out at least!
 -->
