--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-5.jpg
+featured_image: /assets/images/posts/ink-2020-6.jpg
 featured: true
 hidden: true
 ---
@@ -59,7 +59,7 @@ Because the prompt was "blade," I went for another front view, to show the blade
 
 I was trying to give *Adratiklit* a smooth combination of large-animal features and bird features, which is why he has a wattle.  I'm not super happy with how comically small the spikes ended up looking against his giant body though.
 
-<!-- #### Day 6: Rodent
+#### Day 6: Rodent
 ![rodent](/assets/images/posts/ink-2020-6.jpg)
 
 Okay, this picture doesn't actually feature any rodents, but since rodents didn't arise until the non-avian dinosaurs were extinct, I took some artistic license.  This is the new mini carcharodontosaur, *Lajasvenator*, chasing the long-tailed cladotherian mammal (early relative of marsupials and placentals) *Vincelestes* in Early Cretaceous Argentina.  Carcharodontosaurs were a group of generally very large carnivorous theropods with shark-like slicing teeth.  The largest members, *Carcharodontosaurus*, *Giganotosaurus*, and *Mapusaurus*, rivaled *Tyrannosaurus* in size.  *Lajasvenator*, on the other hand, was merely the size of a big dog.
@@ -68,7 +68,7 @@ I wanted to depict this miniaturized carcharodontosaur for the prompt "rodent" b
 
 I gave my *Lajasvenator* an iguana-like keratin structure on its head because many carcharodontosaurs show evidence of some kind of horn structure there, but it's unclear whether it was exposed keratin like an antler, covered with skin, or covered with something else.  In the past I always went the antler route, but I wanted to try something new this time.
 
-#### Day 7: Fancy
+<!-- #### Day 7: Fancy
 ![fancy](/assets/images/posts/ink-2020-7.jpg)
 
 Here's *Kompsornis*, a long-tailed jeholornithiform bird from Early Cretaceous China.  Its name means "elegant bird," which is why I chose it for this prompt.  The plumage is based on an ornate hawk-eagle, which I found by googling "fancy bird".  Most birds whose plumage is considered fancy sport impressive colors, which doesn't go so well with Inktober.  The ornate hawk-eagle, though, has cool patterns that worked well with my black and sepia pens.
