--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-6.jpg
+featured_image: /assets/images/posts/ink-2020-7.jpg
 featured: true
 hidden: true
 ---
@@ -68,7 +68,7 @@ I wanted to depict this miniaturized carcharodontosaur for the prompt "rodent" b
 
 I gave my *Lajasvenator* an iguana-like keratin structure on its head because many carcharodontosaurs show evidence of some kind of horn structure there, but it's unclear whether it was exposed keratin like an antler, covered with skin, or covered with something else.  In the past I always went the antler route, but I wanted to try something new this time.
 
-<!-- #### Day 7: Fancy
+#### Day 7: Fancy
 ![fancy](/assets/images/posts/ink-2020-7.jpg)
 
 Here's *Kompsornis*, a long-tailed jeholornithiform bird from Early Cretaceous China.  Its name means "elegant bird," which is why I chose it for this prompt.  The plumage is based on an ornate hawk-eagle, which I found by googling "fancy bird".  Most birds whose plumage is considered fancy sport impressive colors, which doesn't go so well with Inktober.  The ornate hawk-eagle, though, has cool patterns that worked well with my black and sepia pens.
@@ -77,7 +77,7 @@ Continuing my trend of dinosaurs from front view this year.  There's definitely 
 
 Often, when paleontologists see an animal from a toothed lineage develop a toothless beak, they point to it as a transition to herbivory.  However, lots of modern birds are hyper-carnivores, insectivores, and opportunistic omnivores.  Is this because they had already developed the beak for herbivory, and then switched back to carnivory?  Or does it mean that beak != herbivore in the first place?
 
-#### Day 8: Teeth
+<!-- #### Day 8: Teeth
 ![teeth](/assets/images/posts/ink-2020-8.jpg)
 
 Teeth are something dinosaurs are quite good at.  Here is a comparison of tooth types among the three main groups of large carnivorous theropods: abelisaurs, carcharodontosaurs, and tyrannosaurs.  They all hunted a little bit differently!
