--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-7.jpg
+featured_image: /assets/images/posts/ink-2020-8.jpg
 featured: true
 hidden: true
 ---
@@ -77,7 +77,7 @@ Continuing my trend of dinosaurs from front view this year.  There's definitely 
 
 Often, when paleontologists see an animal from a toothed lineage develop a toothless beak, they point to it as a transition to herbivory.  However, lots of modern birds are hyper-carnivores, insectivores, and opportunistic omnivores.  Is this because they had already developed the beak for herbivory, and then switched back to carnivory?  Or does it mean that beak != herbivore in the first place?
 
-<!-- #### Day 8: Teeth
+#### Day 8: Teeth
 ![teeth](/assets/images/posts/ink-2020-8.jpg)
 
 Teeth are something dinosaurs are quite good at.  Here is a comparison of tooth types among the three main groups of large carnivorous theropods: abelisaurs, carcharodontosaurs, and tyrannosaurs.  They all hunted a little bit differently!
@@ -90,7 +90,7 @@ I think tyrannosaurs are just so handsome compared to the other two groups shown
 
 I guess another group I could have included is the spinosaurids, who had needle-like teeth for a fish-catching bite.  The only spinosaurid novataxon from this year is *Vallibonavenatrix* though, and I'm saving her for a different prompt.  Plus, even three dino portraits were pretty crowded on this little paper.
 
-#### Day 9: Throw
+<!-- #### Day 9: Throw
 ![throw](/assets/images/posts/ink-2020-9.jpg)
 
 Here are some *Wightia*, a new tapejarid pterosaur from the Isle of Wight, throwing themselves off cliffs.  I wanted to experiment with a bit more pterosaur posture diversity.  The ones with the tall crests are males; the ones with the rounded crests are females.  Unlike how I drew *Luchibang* on Day 1, the last phalanx in *Wightia*'s flight finger is crooked relative to the rest, creating a more round-ended wing profile.  I'm not sure how flexible the overgrown wing finger was and how much its range of motion could vary between pterosaur groups...if you know a good study, point me to it.
@@ -202,4 +202,15 @@ Thank goodness for *Gnathomortis*!  I was worried we weren't going to see any ne
 Mosasaurs were lizards, possibly relatives of monitors, possibly relatives of snakes, that made the transition to a fully aquatic lifestyle in the Late Cretaceous period.  Like other marine reptiles, they would have been streamlined rather than scaly, warm-blooded, and given live birth tail first.  Unlike other marine reptiles, they were still *lizards*, and therefore would have had forked tongues, "forked" penises, a pineal (third) eye on top of their head, and would have shed their skin.  Imagine huge discarded mosasaur skins washing up on the beach!  What a sight to see.
 
 I was inspired by my fellow paleo Inktober participant, u/jupiter1390, who on Day 2 did a beautiful depiction of bioluminescent squid using white ink.  I asked what kind of white pen they used, ordered them, and here we are.  It'll take some getting used to, but I'm happy with how this one turned out at least!
+
+#### Day 24: Dig
+![dig](/assets/images/posts/ink-2020-24.jpg)
+
+This is *Mirusavis*, a small enantiornithine bird from Early Cretaceous China.  Its holotype preserves a ridiculous amount of **medullary bone**, which is a type of bone formed temporarily in females as a calcium reserve for producing eggshells.  Other dinosaurs and modern birds are known to have medullary bone deposits in their leg bones, but *Mirusavis* had it everywhere, including the ribs, vertebrae, and arm bones.  This indicates that *Mirusavis*'s eggs would have been very large compared to its body size--estimated at 20%, comparable to the massive egg of the diminutive kiwi bird today.  And a large egg indicates **precociality**, meaning *Mirusavis* chicks would have been born ready to run, fly, and feed themselves.
+
+A modern example of a superprecocial bird is the Australian brush turkey.  The male turkey builds a huge mound of dirt, sticks, and leaf litter that he meticulously guards and upkeeps.  The female lays her eggs inside the mound, which, since it's basically a big compost pile, provides heat to incubate the clutch of eggs.  Once the chicks hatch, they must dig their way out from under a huge pile of dirt, like little bird zombies.
+
+The weird thing is that the male turkey has no idea what his mound is for.  He fastidiously checks the temperature inside the mound every day, and adds more compostables if it's too cold, or digs out a vent in the middle if it's too hot.  But when the female digs a large hole in the mound to lay eggs in, he tries to chase her off and fill the hole immediately.  When his chicks hatch, he tries to chase *them* off too, since to him they're just some unknown actors messing with his beautiful mound.
+
+Nature is very strange.  Life finds a way.
 -->
