--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-8.jpg
+featured_image: /assets/images/posts/ink-2020-9.jpg
 featured: true
 hidden: true
 ---
@@ -90,12 +90,12 @@ I think tyrannosaurs are just so handsome compared to the other two groups shown
 
 I guess another group I could have included is the spinosaurids, who had needle-like teeth for a fish-catching bite.  The only spinosaurid novataxon from this year is *Vallibonavenatrix* though, and I'm saving her for a different prompt.  Plus, even three dino portraits were pretty crowded on this little paper.
 
-<!-- #### Day 9: Throw
+#### Day 9: Throw
 ![throw](/assets/images/posts/ink-2020-9.jpg)
 
 Here are some *Wightia*, a new tapejarid pterosaur from the Isle of Wight, throwing themselves off cliffs.  I wanted to experiment with a bit more pterosaur posture diversity.  The ones with the tall crests are males; the ones with the rounded crests are females.  Unlike how I drew *Luchibang* on Day 1, the last phalanx in *Wightia*'s flight finger is crooked relative to the rest, creating a more round-ended wing profile.  I'm not sure how flexible the overgrown wing finger was and how much its range of motion could vary between pterosaur groups...if you know a good study, point me to it.
 
-#### Day 10: Hope
+<!-- #### Day 10: Hope
 ![hope](/assets/images/posts/ink-2020-10.jpg)
 
 A *Huinculsaurus* chick (one of the strange, beaked, herbivorous relatives of *Carnotaurus* known as noasaurs) sits on its mud nest and hopes its mother will return soon with food.
@@ -213,4 +213,12 @@ A modern example of a superprecocial bird is the Australian brush turkey.  The m
 The weird thing is that the male turkey has no idea what his mound is for.  He fastidiously checks the temperature inside the mound every day, and adds more compostables if it's too cold, or digs out a vent in the middle if it's too hot.  But when the female digs a large hole in the mound to lay eggs in, he tries to chase her off and fill the hole immediately.  When his chicks hatch, he tries to chase *them* off too, since to him they're just some unknown actors messing with his beautiful mound.
 
 Nature is very strange.  Life finds a way.
+
+#### Day 25: Buddy
+![buddy](/assets/images/posts/ink-2020-25.jpg)
+
+*Schleitheimia* was a sauropodomorph closely related to the much better known *Plateosaurus*, from Late Triassic Switzerland.  It's known from only fragmentary remains, so I based my reconstruction mostly on *Plateosaurus*.
+
+Modern crocodilians are known to team up with ground-nesting birds to share nest-guarding duties.  The crocs can scare off large animals that threaten to trample the birds' eggs, and the birds can chase away egg-breaking lizards and other small, nimble threats.  Here, *Schleitheimia* forms a similar partnership with *Procompsognathus*, of *Jurassic Park 2* fame.  *Procompsognathus* is not related to true compsognathids, but rather is a very small coelophysoid.  But since as I said on Day 18, compsognathids closely resemble dinosaurs' ancestral form, it's not really a surprise that older dinosaurs would have looked very similar.
+
 -->
