--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-9.jpg
+featured_image: /assets/images/posts/ink-2020-10.jpg
 featured: true
 hidden: true
 ---
@@ -95,7 +95,7 @@ I guess another group I could have included is the spinosaurids, who had needle-
 
 Here are some *Wightia*, a new tapejarid pterosaur from the Isle of Wight, throwing themselves off cliffs.  I wanted to experiment with a bit more pterosaur posture diversity.  The ones with the tall crests are males; the ones with the rounded crests are females.  Unlike how I drew *Luchibang* on Day 1, the last phalanx in *Wightia*'s flight finger is crooked relative to the rest, creating a more round-ended wing profile.  I'm not sure how flexible the overgrown wing finger was and how much its range of motion could vary between pterosaur groups...if you know a good study, point me to it.
 
-<!-- #### Day 10: Hope
+#### Day 10: Hope
 ![hope](/assets/images/posts/ink-2020-10.jpg)
 
 A *Huinculsaurus* chick (one of the strange, beaked, herbivorous relatives of *Carnotaurus* known as noasaurs) sits on its mud nest and hopes its mother will return soon with food.
@@ -104,7 +104,7 @@ Okay, you may have noticed that what I'm calling a noasaur is just an albatross 
 
 Foliage is quite labor-intensive to draw.  I'm surprisingly happy with how it turned out though.
 
-#### Day 11: Disgusting
+<!-- #### Day 11: Disgusting
 ![disgusting](/assets/images/posts/ink-2020-11.jpg)
 
 Two *Trierarchuncus*, the Hell Creek alvarezsaur, pick grubs out of a hadrosaur patty.  Alvarezsaurs were a weird group of purportedly insectivorous maniraptorans that had just one big finger per hand that they may have used to rip open rotting wood to reach termites and grubs living inside.  *Triearchuncus* means "Captain Hook," in reference to this little dinosaur's overgrown claws.  (Scientists love to give dinosaurs encoded silly names.  No one would name their new dinosaur "Captainhookosaurus," but translate it into Greek and Latin and it becomes kosher.)
