--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -104,14 +104,14 @@ Okay, you may have noticed that what I'm calling a noasaur is just an albatross 
 
 Foliage is quite labor-intensive to draw.  I'm surprisingly happy with how it turned out though.
 
-<!-- #### Day 11: Disgusting
+#### Day 11: Disgusting
 ![disgusting](/assets/images/posts/ink-2020-11.jpg)
 
 Two *Trierarchuncus*, the Hell Creek alvarezsaur, pick grubs out of a hadrosaur patty.  Alvarezsaurs were a weird group of purportedly insectivorous maniraptorans that had just one big finger per hand that they may have used to rip open rotting wood to reach termites and grubs living inside.  *Triearchuncus* means "Captain Hook," in reference to this little dinosaur's overgrown claws.  (Scientists love to give dinosaurs encoded silly names.  No one would name their new dinosaur "Captainhookosaurus," but translate it into Greek and Latin and it becomes kosher.)
 
 Picking at dry cow patties to eat the maggots inside is a favorite pastime of the modern chicken.  They help to keep the insect population in control and spread the nutritious patty material across the ground. Their own nitrogen-rich droppings also help new ground cover to grow, which the cows then can eat, keeping the cycle going.  Mutualistic relationships like this are common among all well-developed ecosystems, so it's reasonable to guess that non-avian dinosaurs may have engaged in similar behavior.  The coat pattern is inspired by a modern insectivore, the numbat.
 
-#### Day 12: Slippery
+<!-- #### Day 12: Slippery
 ![slippery](/assets/images/posts/ink-2020-12.jpg)
 
 *Narindasaurus* takes a bad spill while crossing a creek.  He didn't realize the rocks were so mossy.
