--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-11.jpg
+featured_image: /assets/images/posts/ink-2020-12.jpg
 featured: true
 hidden: true
 ---
@@ -111,7 +111,7 @@ Two *Trierarchuncus*, the Hell Creek alvarezsaur, pick grubs out of a hadrosaur 
 
 Picking at dry cow patties to eat the maggots inside is a favorite pastime of the modern chicken.  They help to keep the insect population in control and spread the nutritious patty material across the ground. Their own nitrogen-rich droppings also help new ground cover to grow, which the cows then can eat, keeping the cycle going.  Mutualistic relationships like this are common among all well-developed ecosystems, so it's reasonable to guess that non-avian dinosaurs may have engaged in similar behavior.  The coat pattern is inspired by a modern insectivore, the numbat.
 
-<!-- #### Day 12: Slippery
+#### Day 12: Slippery
 ![slippery](/assets/images/posts/ink-2020-12.jpg)
 
 *Narindasaurus* takes a bad spill while crossing a creek.  He didn't realize the rocks were so mossy.
@@ -120,7 +120,7 @@ Picking at dry cow patties to eat the maggots inside is a favorite pastime of th
 
 You think you, with your puny seven neck vertebrae, get bad whiplash after a fall or car accident?  I wonder if a sauropod would survive this kind of fall even if it didn't hit its head on a rock.  Maybe they had some kind of neck adaptation to mitigate this.  Or maybe their heads were just so small and light that the whip action wasn't as powerful.  Or maybe they just rarely fell down.
 
-#### Day 13: Dune
+<!-- #### Day 13: Dune
 ![dune](/assets/images/posts/ink-2020-13.jpg)
 
 It's *Beg tse*, the little basal ceratopsian from Early Cretaceous Mongolia.  The ancestors of *Triceratops* and kin were small and bipedal, and had minimal neck frills.  *Beg* is named after a Mongolian war deity and has the second-shortest binomial name of all non-avian dinosaurs (the first being the famous *Yi qi*, and closely followed by a third-place *Mei long*).  First top view of the series, and only the second ornithischian!  #saurischianprivilege
@@ -220,5 +220,12 @@ Nature is very strange.  Life finds a way.
 *Schleitheimia* was a sauropodomorph closely related to the much better known *Plateosaurus*, from Late Triassic Switzerland.  It's known from only fragmentary remains, so I based my reconstruction mostly on *Plateosaurus*.
 
 Modern crocodilians are known to team up with ground-nesting birds to share nest-guarding duties.  The crocs can scare off large animals that threaten to trample the birds' eggs, and the birds can chase away egg-breaking lizards and other small, nimble threats.  Here, *Schleitheimia* forms a similar partnership with *Procompsognathus*, of *Jurassic Park 2* fame.  *Procompsognathus* is not related to true compsognathids, but rather is a very small coelophysoid.  But since as I said on Day 18, compsognathids closely resemble dinosaurs' ancestral form, it's not really a surprise that older dinosaurs would have looked very similar.
+
+#### Day 26: Hide
+![hide](/assets/images/posts/ink-2020-26.jpg)
+
+*Dynamosuchus* was a bobcat-sized ornithosuchid pseudosuchian from early Late Triassic Brazil.  Ornithosuchids (meaning "bird croc" for some reason) were an early branch off the main croc tree that kind of pioneered the quadrupedal terrestrial predator strategy that would be further explored later by more famous pseudosuchians like *Fasolasuchus*, *Postosuchus*, and *Saurosuchus*.  Only four other genera of ornithosuchid are known, so the description of *Dynamosuchus* increases their diversity by 25%!
+
+I've given my *Dynamosuchus* cryptic coloring like a jaguar, for hiding amongst leaf litter.
 
 -->
