--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-12.jpg
+featured_image: /assets/images/posts/ink-2020-13.jpg
 featured: true
 hidden: true
 ---
@@ -120,12 +120,12 @@ Picking at dry cow patties to eat the maggots inside is a favorite pastime of th
 
 You think you, with your puny seven neck vertebrae, get bad whiplash after a fall or car accident?  I wonder if a sauropod would survive this kind of fall even if it didn't hit its head on a rock.  Maybe they had some kind of neck adaptation to mitigate this.  Or maybe their heads were just so small and light that the whip action wasn't as powerful.  Or maybe they just rarely fell down.
 
-<!-- #### Day 13: Dune
+#### Day 13: Dune
 ![dune](/assets/images/posts/ink-2020-13.jpg)
 
 It's *Beg tse*, the little basal ceratopsian from Early Cretaceous Mongolia.  The ancestors of *Triceratops* and kin were small and bipedal, and had minimal neck frills.  *Beg* is named after a Mongolian war deity and has the second-shortest binomial name of all non-avian dinosaurs (the first being the famous *Yi qi*, and closely followed by a third-place *Mei long*).  First top view of the series, and only the second ornithischian!  #saurischianprivilege
 
-#### Day 14: Armor
+<!-- #### Day 14: Armor
 ![armor](/assets/images/posts/ink-2020-14.jpg)
 
 Here's *Navajoceratops*, a newly discovered transitional ceratopsian from Late Cretaceous North America.  This, along with *Terminocavus*, another ceratopsian named in the same paper, represent newly discovered transitional forms between *Pentaceratops* and *Anchiceratops*.
