--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-13.jpg
+featured_image: /assets/images/posts/ink-2020-14.jpg
 featured: true
 hidden: true
 ---
@@ -125,7 +125,7 @@ You think you, with your puny seven neck vertebrae, get bad whiplash after a fal
 
 It's *Beg tse*, the little basal ceratopsian from Early Cretaceous Mongolia.  The ancestors of *Triceratops* and kin were small and bipedal, and had minimal neck frills.  *Beg* is named after a Mongolian war deity and has the second-shortest binomial name of all non-avian dinosaurs (the first being the famous *Yi qi*, and closely followed by a third-place *Mei long*).  First top view of the series, and only the second ornithischian!  #saurischianprivilege
 
-<!-- #### Day 14: Armor
+#### Day 14: Armor
 ![armor](/assets/images/posts/ink-2020-14.jpg)
 
 Here's *Navajoceratops*, a newly discovered transitional ceratopsian from Late Cretaceous North America.  This, along with *Terminocavus*, another ceratopsian named in the same paper, represent newly discovered transitional forms between *Pentaceratops* and *Anchiceratops*.
@@ -134,7 +134,7 @@ While the horns of ceratopsians may have been useful as weapons or at least dete
 
 I think detailed, repeated ink patterns like this are sort of like the art version of ultramarathon running.  If you can't win a regular marathon, you just run for longer; if you can't make good lineart or gestures, you go for broke on detail.  It takes hours but doesn't really require much skill.
 
-#### Day 15: Outpost
+<!-- #### Day 15: Outpost
 ![outpost](/assets/images/posts/ink-2020-15.jpg)
 
 This is *Antarcticavis*, a bird we know very little about, from Late Cretaceous Antarctica.  The fragmentary fossils are just informative enough that scientists can tell that it's a bird that's not *Vegavis* and not *Polarornis*, two other known birds from the same time and place, but that's pretty much it.  Here, I've reconstructed it as an ichthyornithine, a basal toothed bird.  *Ichthyornis* is super common across Late Cretaceous North America, and is thought to have been seagull-like; however, no other birds are known from within that family.  The skua is a gull that switched over to a more bird-of-prey type niche in modern Antarctica, so my *Antarcticavis* is an ichthyornithine that also moved to Antarctica and became more predatory.  It represents a distant outpost of the ichthyornithine branch.
