--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-14.jpg
+featured_image: /assets/images/posts/ink-2020-15.jpg
 featured: true
 hidden: true
 ---
@@ -134,14 +134,14 @@ While the horns of ceratopsians may have been useful as weapons or at least dete
 
 I think detailed, repeated ink patterns like this are sort of like the art version of ultramarathon running.  If you can't win a regular marathon, you just run for longer; if you can't make good lineart or gestures, you go for broke on detail.  It takes hours but doesn't really require much skill.
 
-<!-- #### Day 15: Outpost
+#### Day 15: Outpost
 ![outpost](/assets/images/posts/ink-2020-15.jpg)
 
 This is *Antarcticavis*, a bird we know very little about, from Late Cretaceous Antarctica.  The fragmentary fossils are just informative enough that scientists can tell that it's a bird that's not *Vegavis* and not *Polarornis*, two other known birds from the same time and place, but that's pretty much it.  Here, I've reconstructed it as an ichthyornithine, a basal toothed bird.  *Ichthyornis* is super common across Late Cretaceous North America, and is thought to have been seagull-like; however, no other birds are known from within that family.  The skua is a gull that switched over to a more bird-of-prey type niche in modern Antarctica, so my *Antarcticavis* is an ichthyornithine that also moved to Antarctica and became more predatory.  It represents a distant outpost of the ichthyornithine branch.
 
 I just finished reading *The Bird Way*, by Jennifer Ackerman (she also wrote *The Genius of Birds*, which I'd read and enjoyed) and it features a lot of really nice ink drawings in a style different than my usual.  I tried mimicking that style for this piece.
 
-#### Day 16: Rocket
+<!-- #### Day 16: Rocket
 ![rocket](/assets/images/posts/ink-2020-16.jpg)
 
 It's *Ordosipterus*, a dsungaripterid pterosaur from Early Cretaceous China.  While other dsungaripterids were probably durophages, using their upturned beaks to pry shellfish off rocks and their globular molars to crush the shells, *Ordosipterus* was probably not.  It had a wider, less upturned beak with flatter molars, and was much smaller than the closely related *Dsungaripterus*.  We don't know what it *was* doing, but perhaps it was part of a lineage that diverged in function from the rest of the dsungaripterids.  In this picture, it's adopting a falcon-like "stoop" diving posture, maybe to rocket past a flying bird and whack its wing, causing it to crash.  Less adapted for extreme speed than a modern falcon, *Ordosipterus* would not have needed to be to prey on Early Cretaceous birds, which were often poor fliers.
