--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-15.jpg
+featured_image: /assets/images/posts/ink-2020-16.jpg
 featured: true
 hidden: true
 ---
@@ -141,7 +141,7 @@ This is *Antarcticavis*, a bird we know very little about, from Late Cretaceous 
 
 I just finished reading *The Bird Way*, by Jennifer Ackerman (she also wrote *The Genius of Birds*, which I'd read and enjoyed) and it features a lot of really nice ink drawings in a style different than my usual.  I tried mimicking that style for this piece.
 
-<!-- #### Day 16: Rocket
+#### Day 16: Rocket
 ![rocket](/assets/images/posts/ink-2020-16.jpg)
 
 It's *Ordosipterus*, a dsungaripterid pterosaur from Early Cretaceous China.  While other dsungaripterids were probably durophages, using their upturned beaks to pry shellfish off rocks and their globular molars to crush the shells, *Ordosipterus* was probably not.  It had a wider, less upturned beak with flatter molars, and was much smaller than the closely related *Dsungaripterus*.  We don't know what it *was* doing, but perhaps it was part of a lineage that diverged in function from the rest of the dsungaripterids.  In this picture, it's adopting a falcon-like "stoop" diving posture, maybe to rocket past a flying bird and whack its wing, causing it to crash.  Less adapted for extreme speed than a modern falcon, *Ordosipterus* would not have needed to be to prey on Early Cretaceous birds, which were often poor fliers.
@@ -150,7 +150,7 @@ I wouldn't say *Ordosipterus* would've been my top choice for a falcon-like pter
 
 In terms of style, I was trying to use comic-book-like dramatic shading and speed lines to make it look more rocket-like.
 
-#### Day 17: Storm
+<!-- #### Day 17: Storm
 ![storm](/assets/images/posts/ink-2020-17.jpg)
 
 \*Sad deinocheirid noises\*
