--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-16.jpg
+featured_image: /assets/images/posts/ink-2020-17.jpg
 featured: true
 hidden: true
 ---
@@ -150,7 +150,7 @@ I wouldn't say *Ordosipterus* would've been my top choice for a falcon-like pter
 
 In terms of style, I was trying to use comic-book-like dramatic shading and speed lines to make it look more rocket-like.
 
-<!-- #### Day 17: Storm
+#### Day 17: Storm
 ![storm](/assets/images/posts/ink-2020-17.jpg)
 
 \*Sad deinocheirid noises\*
@@ -159,7 +159,7 @@ In terms of style, I was trying to use comic-book-like dramatic shading and spee
 
 Primitive feathers would not have been nearly as good as modern birds' feathers at repelling water, so under stormy conditions certain dinosaurs would have gotten uncomfortably soaked.  I'm quite proud of how Eeyore-esque he looks.
 
-#### Day 18: Trap
+<!-- #### Day 18: Trap
 ![trap](/assets/images/posts/ink-2020-18.jpg)
 
 *Xunmenglong*, a teeny-tiny compsognathid from Early Cretaceous China, gets caught in a death trap.  The web owner will feast on this oversized prize for days!
