--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-17.jpg
+featured_image: /assets/images/posts/ink-2020-18.jpg
 featured: true
 hidden: true
 ---
@@ -16,7 +16,7 @@ It's that time of year again!  I'm really excited to compare my efforts this yea
 
 Last year I challenged myself to relate each prompt word to a Mesozoic reptile.  This year I'll do the same, but with the additional challenge of only drawing 2020 novataxa--that is, Mesozoic reptile genera named this year.  Don't worry, there are lots to choose from!
 
-Note that since it's early in the month, there're only a few drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later!
+Note that since the month isn't over, there're only a few drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later!
 
 #### Day 1: Fish
 ![fish](/assets/images/posts/ink-2020-1.jpg)
@@ -159,14 +159,14 @@ In terms of style, I was trying to use comic-book-like dramatic shading and spee
 
 Primitive feathers would not have been nearly as good as modern birds' feathers at repelling water, so under stormy conditions certain dinosaurs would have gotten uncomfortably soaked.  I'm quite proud of how Eeyore-esque he looks.
 
-<!-- #### Day 18: Trap
+#### Day 18: Trap
 ![trap](/assets/images/posts/ink-2020-18.jpg)
 
 *Xunmenglong*, a teeny-tiny compsognathid from Early Cretaceous China, gets caught in a death trap.  The web owner will feast on this oversized prize for days!
 
 Compsognathids were the dinosaur version of rats: small generalists that closely resemble the ancestral form.
 
-#### Day 19: Dizzy
+<!-- #### Day 19: Dizzy
 ![dizzy](/assets/images/posts/ink-2020-19.jpg)
 
 Them dragon-horses be tripping!
@@ -227,5 +227,12 @@ Modern crocodilians are known to team up with ground-nesting birds to share nest
 *Dynamosuchus* was a bobcat-sized ornithosuchid pseudosuchian from early Late Triassic Brazil.  Ornithosuchids (meaning "bird croc" for some reason) were an early branch off the main croc tree that kind of pioneered the quadrupedal terrestrial predator strategy that would be further explored later by more famous pseudosuchians like *Fasolasuchus*, *Postosuchus*, and *Saurosuchus*.  Only four other genera of ornithosuchid are known, so the description of *Dynamosuchus* increases their diversity by 25%!
 
 I've given my *Dynamosuchus* cryptic coloring like a jaguar, for hiding amongst leaf litter.
+
+#### Day 27: Music
+![music](/assets/images/posts/ink-2020-27.jpg)
+
+This is *Wulong*, meaning "dancing dragon," a new microraptorine (four-winged "raptor" dinosaur) from Early Cretaceous China.  This one is doing a mating song and dance akin to a frigatebird, inflating its colorful display pouch for the females to see.
+
+Even though bird wings are pretty constrained by their function, there is still diversity in their shape, posture, and feathering.  Usually I see microraptorines depicted with songbird-like rounded wings; this one has more angular wings.  On a creature this size maybe that doesn't make sense, but it looks kind of cool and unusual.
 
 -->
